<resources>
    <string name="app_name">FireBase Auth with MVVM</string>
    <string name="edit_order">Edit order</string>
    <string name="flexible_title">Products</string>
    <string name="store">Store</string>
    <string name="orders">Orders</string>
    <string name="finished_orders">Finished Orders</string>
    <string name="title_store">Store</string>
    <string name="title_order">Order</string>
    <string name="title_finished_order">Finished Order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="store_product_name">Name</string>
    <string name="store_product_quantity">Quantity</string>
    <string name="store_product_default_quantity">1</string>
    <string name="store_product_materials_cost">Materials Cost</string>
    <string name="store_product_price">Price</string>
    <string name="store_product_default_materials_cost">00.00</string>
    <string name="store_product_default_price">00.00</string>
    <string name="store_item_image_description">store item image</string>
    <string name="store_item_add">Add</string>
    <string name="store_product_cancel">Cancle</string>
    <string name="from_gall">Choose From Gallery</string>
    <string name="from_cam">Choose From Camera</string>
    <string name="cam_and_storage_rationale">Allow 7Store to read your device photos or from camera</string>
    <string name="rationale_ask_ok">Okay</string>
    <string name="rationale_ask_cancel">Cancel</string>
    <string name="select_a_product_image">select a product image</string>
    <string name="add_product_name">add product name</string>
    <string name="add_product_Quantity">add product Quantity</string>
    <string name="add_product_cost">add product cost</string>
    <string name="add_product_price">add product price</string>
    <string name="add_product_success">Add product Successfully</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_name_hint">Enter Customer Name</string>
    <string name="select_a_product">Select A product</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="customer_phone_hint">Enter Customer Phone</string>
    <string name="customer_address">Customer Address</string>
    <string name="customer_address_hint">Enter Customer Address</string>
    <string name="customer_account_link_hint">Enter Customer Account Link</string>
    <string name="customer_account">Customer Account</string>
    <string name="product_name">Product Name</string>
    <string name="choose_a_product">Choose A product</string>
    <string name="product_quantity_hint">Choose Product Quantity</string>
    <string name="request_date">request Date</string>
    <string name="request_date_hint">Enter Request Date</string>
    <string name="delivery_date">Delivery Date</string>
    <string name="delivery_date_hint">Enter Delivery Date</string>
    <string name="enter_customer_name">Enter Customer Name</string>
    <string name="enter_customer_phone">Enter Customer Phone</string>
    <string name="enter_customer_address">Enter Customer Address</string>
    <string name="enter_customer_account">Enter Customer Account</string>
    <string name="enter_request_date">Enter Request Date</string>
    <string name="enter_delivery_date">Enter Delivery Date</string>
    <string name="choose_product_quantity">Choose product Quantity</string>


</resources>
