<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/navigation_store">

    <fragment
        android:id="@+id/navigation_store"
        android:name="com.example.firebaseauthwithmvvm.ui.store.StoreFragment"
        android:label="@string/title_store"
        tools:layout="@layout/fragment_store" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.firebaseauthwithmvvm.ui.orders.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/order_fragment"

        />
    <fragment
        android:id="@+id/navigation_finished_orders"
        android:name="com.example.firebaseauthwithmvvm.ui.finihsed_orders.FinishedOrderFragment"
        android:label="@string/title_finished_order"
        tools:layout="@layout/finished_order_fragment" />

</navigation>