<?xml version="1.0" encoding="utf-8"?>

<layout>

    <data>

        <variable
            name="viewModel"
            type="com.example.firebaseauthwithmvvm.ui.addOrder.AddOrderViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.addOrder.AddOrderActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout_add_order"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="vertical"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_order_title"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="Add an order"
                android:textColor="@color/gray"
                android:textSize="28sp"
                android:visibility="visible" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_bar_layout_add_order"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout_add_order">

            <LinearLayout
                android:id="@+id/ll_parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">

                <LinearLayout
                    android:id="@+id/ll_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="6dp"
                        android:text="@string/customer_name"
                        android:textColor="@color/normal_grey"
                        android:textSize="12sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_light_border"
                        android:hint="@string/customer_name_hint"
                        android:padding="18dp"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="6dp"
                        android:text="@string/customer_phone"
                        android:textColor="@color/normal_grey"
                        android:textSize="12sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_light_border"
                        android:hint="@string/customer_phone_hint"
                        android:inputType="phone"
                        android:padding="18dp"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="6dp"
                        android:text="@string/customer_address"
                        android:textColor="@color/normal_grey"
                        android:textSize="12sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_light_border"
                        android:hint="@string/customer_address_hint"
                        android:inputType="textPostalAddress"
                        android:padding="18dp"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_link"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="6dp"
                        android:text="@string/customer_account"
                        android:textColor="@color/normal_grey"
                        android:textSize="12sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_light_border"
                        android:hint="@string/customer_account_link_hint"
                        android:inputType="textUri"
                        android:padding="18dp"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_order_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="6dp"
                        android:text="@string/product_name"
                        android:textColor="@color/normal_grey"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_load_orders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_light_border"
                        android:hint="@string/choose_a_product"
                        android:inputType="textPostalAddress"
                        android:onClick="@{(v) -> viewModel.getproducts(v)}"
                        android:padding="18dp"
                        android:text="@{viewModel.getSelectedProductName}" />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/ll_order_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="6dp"
                        android:text="Product QTY"
                        android:textColor="@color/normal_grey"
                        android:textSize="12sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_light_border"
                        android:hint="@string/product_quantity_hint"
                        android:inputType="number"
                        android:padding="18dp"
                        android:text="amount" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_order_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="6dp"
                        android:text="@string/request_date"
                        android:textColor="@color/normal_grey"
                        android:textSize="12sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_light_border"
                        android:hint="@string/request_date_hint"
                        android:inputType="datetime"
                        android:padding="18dp"
                        android:text="" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_order_delivered_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingTop="10dp"
                        android:paddingBottom="6dp"
                        android:text="@string/delivery_date"
                        android:textColor="@color/normal_grey"
                        android:textSize="12sp" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edit_text_light_border"
                        android:hint="@string/delivery_date_hint"
                        android:inputType="datetime"
                        android:padding="18dp"
                        android:text="" />

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
