<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.example.a7storenavigationdrawer.ui.addItemToStore.StoreItemViewModel" />


        <variable
            name="event"
            type="com.example.firebaseauthwithmvvm.ui.addItemToStore.ViewModelEvent" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            app:cardCornerRadius="15dp">

            <LinearLayout
                android:id="@+id/ll_add_store_item"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="100"
                tools:context=".ui.addItemToStore.AddStoreItemActivity">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="30"
                    android:paddingTop="0dp"
                    android:paddingEnd="0dp">

                    <ImageView
                        android:id="@+id/iv_store_product_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/store_item_image_description"
                        android:scaleType="centerCrop"
                        android:visibility="visible" />
                    <!--                        app:imageUrl='@{viewmodel.productImageUri}'-->
                    <!--                        />-->

                    <RelativeLayout
                        android:id="@+id/ll_container_before_upload"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingTop="16dp"

                        >

                        <TextView
                            android:id="@+id/tv_upload_photo"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="Upload product photo "
                            android:textSize="18sp"
                            android:visibility="@{viewmodel.ProductImageUri == null ? View.VISIBLE : View.GONE}" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
                            android:layout_margin="15dp"
                            android:onClick="@{() -> viewmodel.onClickUploadProductImage()}"
                            android:src="@drawable/ic_edit_product_img" />


                        <!--                        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
                        <!--                            android:layout_width="wrap_content"-->
                        <!--                            android:layout_height="wrap_content"-->
                        <!--                            android:layout_centerInParent="true"-->
                        <!--                            android:onClick="@{() -> viewmodel.onClickUploadProductImage()}"-->

                        <!--                            />-->

                    </RelativeLayout>

                    <!--                    <LinearLayout-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="match_parent"-->
                    <!--                        android:layout_below="@id/tv_upload_photo"-->
                    <!--                        android:gravity="center">-->

                    <!--                       -->

                    <!--                    </LinearLayout>-->

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="70"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <!--                        <TextView-->
                        <!--                            android:layout_width="wrap_content"-->
                        <!--                            android:layout_height="wrap_content"-->
                        <!--                            android:paddingTop="5dp"-->
                        <!--                            android:paddingBottom="5dp"-->
                        <!--                            android:text="Item Name"-->
                        <!--                            android:textColor="@color/slate_gray"-->
                        <!--                            android:textSize="16sp"-->
                        <!--                            android:visibility="gone" />-->

                        <EditText
                            android:id="@+id/et_store_product_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/store_product_name"
                            android:inputType="text"
                            android:paddingTop="16dp"
                            android:paddingBottom="16dp"
                            android:text="@={viewmodel.productName}" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:paddingBottom="5dp"
                            android:text="@string/store_product_quantity"

                            android:textColor="@color/slate_gray"
                            android:textSize="@dimen/hint_16" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="bottom"
                            android:paddingBottom="16dp">

                            <Button
                                android:id="@+id/btn_store_product_quantity_increment"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:background="@drawable/btn_bg_rounded_plus"
                                android:padding="0dp"

                                />

                            <EditText
                                android:id="@+id/et_store_product_quantity"
                                android:layout_width="60dp"
                                android:layout_height="wrap_content"
                                android:gravity="center_horizontal"
                                android:inputType="numberDecimal"
                                android:maxLength="2"
                                android:paddingLeft="10dp"
                                android:paddingRight="10dp"
                                android:text="@={viewmodel.productQuantity}" />

                            <Button
                                android:id="@+id/btn_store_product_quantity_decrement"
                                android:layout_width="25dp"
                                android:layout_height="25dp"
                                android:background="@drawable/btn_bg_rounded_minus" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:baselineAligned="false"
                            android:orientation="horizontal"
                            android:paddingTop="5dp"
                            android:paddingBottom="10dp"
                            android:weightSum="2">

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:paddingBottom="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="5dp"
                                    android:paddingBottom="10dp"
                                    android:text="@string/store_product_materials_cost"
                                    android:textColor="@color/slate_gray"
                                    android:textSize="@dimen/hint_16" />


                                <EditText
                                    android:id="@+id/et_store_product_matrial_cost"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/edit_text_border"
                                    android:drawableStart="@drawable/ic_sterling_white"
                                    android:drawablePadding="@dimen/drawable_padding"
                                    android:inputType="numberDecimal"
                                    android:maxLength="8"
                                    android:text="@={viewmodel.productCostValue}"

                                    />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:orientation="vertical"
                                android:paddingBottom="10dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:paddingTop="5dp"
                                    android:paddingBottom="10dp"
                                    android:text="@string/store_product_price"
                                    android:textColor="@color/slate_gray"
                                    android:textSize="@dimen/hint_16" />

                                <EditText
                                    android:id="@+id/et_store_product_price"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/edit_text_border"
                                    android:drawableLeft="@drawable/ic_sterling_black"
                                    android:drawablePadding="@dimen/drawable_padding"
                                    android:inputType="numberDecimal"
                                    android:maxLength="8"
                                    android:text="@={viewmodel.productPrice}" />

                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:paddingTop="10dp">

                            <Button
                                android:id="@+id/btn_store_product_add"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:background="@drawable/rounded_orange_btn"
                                android:onClick="@{() -> viewmodel.addProductToStore()}"
                                android:text="@string/store_item_add"
                                android:textColor="@color/white"

                                />

                            <Button
                                android:id="@+id/btn_store_product_cancel"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="5dp"
                                android:background="?android:attr/selectableItemBackground"
                                android:onClick="@{() ->viewmodel.cancel()}"
                                android:text="@string/store_product_cancel" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </RelativeLayout>

</layout>